small style change for missions/operations list pages to fix spacing issue

--- a/inc/styles.css
+++ b/inc/styles.css
@@ -1580,7 +1580,6 @@ img {
 	color: #DDD;
 	text-align: right;
 	float: right;
-	width: 60%;
 	margin-right: 4px;
 }
 
